# asphalt-script

./: .gitignore  Cargo.toml  README.md
examples/: apsver.aps  args.aps  binops.aps  bool.aps  cat.aps  char.aps  comment.aps  delete_var.aps  die.aps  die2.aps  envvars.aps  functions.aps  hello world.aps  imut.aps  int.aps  intcmp.aps  jump.aps  jumpif.aps  jumpto.aps  logic.aps  mut.aps  mut.asp  os.aps  strcmp.aps  string.aps
src/: binops.rs  comp.rs  errcodes.rs  format.rs  fun.rs  function.rs  function_common.rs  int.rs  jump.rs  lexer.rs  logic.rs  main.rs  memory.rs  print.rs  process.rs  read.rs  string.rs  test.rs
tests/: manyArgs  testargs  testvarprint
