[package]
name = "asphalt-scipt"
version = "0.0.0"
edition = "2021"
rust-version = "1.69.0"
license-file = "LICENSE"
description = "A scripting language written in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
